# vaultpay

./: README.md
anchor/: Anchor.toml  Cargo.toml  package.json
anchor/programs/kamino/: Cargo.toml
anchor/programs/kamino/src/: lib.rs
anchor/programs/mock_yield_source/: Cargo.toml
anchor/programs/mock_yield_source/src/: errors.rs  lib.rs
anchor/programs/mock_yield_source/src/helper/: mod.rs
anchor/programs/mock_yield_source/src/instructions/: claim.rs  deposit.rs  initialize.rs  mod.rs  open_vault.rs  withdraw.rs
anchor/programs/mock_yield_source/src/states/: mod.rs  yield_accounts.rs  yield_reserve.rs
anchor/programs/vaultpay/: Cargo.toml
anchor/programs/vaultpay/src/: errors.rs  lib.rs
anchor/programs/vaultpay/src/instructions/: cancel_subscription.rs  claim_treasury.rs  deposit.rs  init_subscription.rs  init_user.rs  init_vendor.rs  initialize.rs  mod.rs  process_payment.rs  withdraw.rs
anchor/programs/vaultpay/src/states/: config.rs  mod.rs  subscription.rs  vendor.rs
anchor/tests/: mock_source.ts  utils.ts  vaultpay.ts
anchor/vaultpay/: Anchor.toml
anchor/vaultpay/programs/vaultpay/: Cargo.toml
anchor/vaultpay/programs/vaultpay/src/: lib.rs
anchor/vaultpay/programs/vaultpay/src/instructions/: mod.rs
docs/: architecture.excalidraw  description.md  vaultpay.excalidraw
frontend/: package-lock.json  tailwind.config.ts
frontend/components/: DepositForm.module.css  DepositForm.tsx  MoneyDisplay.module.css  MoneyDisplay.tsx  NavBar.module.css  NavBar.tsx  OfferForm.module.css  OfferForm.tsx  SubscriptionForm.module.css  (+5 more)
(+9 files in other folders)
