[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.release.package.fixed]
debug-assertions = true
overflow-checks = true

[workspace.dependencies]
# Anchor
anchor-lang = { version = "0.30.1" }
anchor-client = { version = "0.30.1" }
anchor-spl = { version = "0.30.1", features = ["dex", "token"] }